--- a/DataImportExample/LoadDataExample.ipynb
+++ b/DataImportExample/LoadDataExample.ipynb
@@ -226,10 +226,12 @@
     "import numpy as np # Required for some computations\n",
     "import matplotlib.pyplot as plt # Required for plotting\n",
     "\n",
-    "# We will use Pandas - a powerful library built precisey for analyses like this - to read the data in the \n",
-    "# CSV file into a 'dataframe' the fundamental unit of working with Pandas. In this instance I use the 'read_csv'\n",
-    "# function to create a dataframe, defining column names for myself and telling pandas to skip the header row. I could \n",
-    "# have left the 'names' and 'skiprows' options and Pandas would have defined the names based on the header row.\n",
+    "# We will use Pandas - a powerful library built precisey for analyses \n",
+    "# like this - to read the data in the CSV file into a 'dataframe' the \n",
+    "# fundamental unit of working with Pandas. In this instance I use the 'read_csv'\n",
+    "# function to create a dataframe, defining column names for myself and telling \n",
+    "# pandas to skip the header row. I could  have left the 'names' and 'skiprows'\n",
+    "# options and Pandas would have defined the names based on the header row.\n",
     "df = pd.read_csv('HenrysForkDischarge.csv', names=['Y','M','D','Q'], skiprows=1)\n",
     "\n",
     "# Now, here's what the first 20 records of dataframe looks like\n",
