--- a/Module08_BoiseStateBucketModel/BoiseStateBucketModel_V0.ipynb
+++ b/Module08_BoiseStateBucketModel/BoiseStateBucketModel_V0.ipynb
@@ -251,6 +251,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Plot the results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
