Initial add of coupled model

--- a/Module09_SimpleSnowModel/TempIndexSnowModel.ipynb
+++ b/Module09_SimpleSnowModel/TempIndexSnowModel.ipynb
@@ -239,7 +239,8 @@
     "Tscrit = 2.9\n",
     "\n",
     "df = pd.read_csv(snotel_file, \\\n",
-    "    names=['Y','M','D','depth','SWE','PRCP_cum','PRCP_day','T_obs','T_max','T_min','T_avg'],skiprows=1)\n",
+    "    names=['Y','M','D','depth','SWE','PRCP_cum','PRCP_day', \\\n",
+    "    'T_obs','T_max','T_min','T_avg'],skiprows=1)\n",
     "\n",
     "# Compute a serial date and append it to the data frame\n",
     "df['SerDates'] = pd.to_datetime(df.Y*10000+df.M*100+df.D,format='%Y%m%d')\n",
